<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/nav_search" />
        <item
            android:id="@+id/nav_user_reg"
            android:icon="@drawable/ic_file_upload_black_24dp"
            android:title="@string/nav_user_reg" />
        <item
            android:id="@+id/nav_developer_reg"
            android:icon="@drawable/ic_cloud_upload_black_24dp"
            android:title="@string/nav_developer_reg" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />

        </menu>
    </item>

</menu>
