<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UserReg.RegUser"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        >

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:foregroundGravity="center"
            android:layout_margin="5dp"
            android:id="@+id/card_view_user"
            app:cardCornerRadius="200dp"
            android:elevation="@dimen/fab_margin"
            android:layout_height="400dp">

            <AutoCompleteTextView
                android:id="@+id/user_full_name"
                android:hint="@string/full_name"
                android:layout_width="match_parent"
                android:layout_marginTop="100dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_height="wrap_content"
                />
            <AutoCompleteTextView
                android:id="@+id/user_password"
                android:hint="@string/password_hint"
                android:layout_width="match_parent"
                android:layout_marginTop="170dp"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginRight="@dimen/fab_margin"
                android:layout_height="wrap_content"
                />



        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/user_upload_button"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/fab_margin"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/card_view_user"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:padding="@dimen/fab_margin"
            android:text="@string/upload_button" />

        <Button
            android:layout_width="wrap_content"
            android:id="@+id/show_login"
            android:onClick="ShowLoginUser"
            android:text="@string/have_an_account"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="340dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_height="40dp" />
    </RelativeLayout>

</ScrollView>
